nova_tests/plan118/neg/plan118_1_addr_chains_t1_neg_call_field_chain.nv
// Plan 118.6 — addr_of() removed → E_ADDR_OF_REMOVED.
// EXPECT_COMPILE_ERROR E_ADDR_OF_REMOVED
module neg.plan118_1_addr_chains_t1_neg_call_field_chain

type Sv {
    ro v i64
}

fn make() -> Sv {
    ro s = Sv { v: 1 }
    s
}

test "addr_of removed — call-rooted field chain gives E_ADDR_OF_REMOVED" {
    unsafe {
        ro p = addr_of(make().v)
    }
}
